--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.23.26",
+    "motion": "^12.25.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
